--- a/farmoptiai/package.json
+++ b/farmoptiai/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "next": "^14.0.4-canary.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "typewriter-effect": "^2.21.0"
   }
 }
