--- a/farmoptiai/package.json
+++ b/farmoptiai/package.json
@@ -13,6 +13,7 @@
     "next": "^14.0.4-canary.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-social-icons": "^6.7.0",
     "typewriter-effect": "^2.21.0"
   }
 }
