--- a/farmoptiai/package.json
+++ b/farmoptiai/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "next": "^14.0.4-canary.3",
     "react": "^18",
     "react-dom": "^18",
